@@ -133,39 +133,35 @@
 								<scrollspeed>100</scrollspeed>
 								<pauseatend>4000</pauseatend>						
 							</control>
-							<control type="group">
-								<visible>Control.HasFocus(20)</visible>
+							<control type="grouplist">
+								<visible>Control.HasFocus(20) + !Container(20).OnNext + !Container(20).OnPrevious</visible>
 								<animation effect="slide" time="0" start="0,0" end="0,27" condition="Control.IsVisible(16) + !IsEmpty(Control.GetLabel(17))">Conditional</animation>
-								<animation effect="fade" time="250">Visible</animation>
+								<itemgap>0</itemgap>
+								<orientation>horizontal</orientation>
+								<width>530</width>
+								<height>21</height>
+								<left>-15</left>	
+								<top>265</top>							
+								<align>center</align>
+								<animation effect="fade" time="250" delay="50">Visible</animation>
 								<animation effect="fade" time="0">Hidden</animation>
-								<control type="image" id="201">
-									<left>240</left>
-									<top>265</top>
+								<control type="image" id="201">									
 									<width>21</width>
 									<height>18</height>
 									<texture background="true">buttons/arrow.png</texture>
 									<colordiffuse>CCFFFFFF</colordiffuse>
-									<visible>!ControlGroup(21).HasFocus + !Control.HasFocus(23)</visible>
 									<visible>IntegerGreaterThan(Container(23).NumItems,0)</visible>
-									<animation effect="fade" time="100" reversible="false">Visible</animation>
-									<animation effect="fade" time="100" reversible="false">Hidden</animation>
-									<animation effect="slide" end="-12,0" time="200" condition="!IsEmpty(Container(20).ListItem.Property(widget))" reversible="false">Conditional</animation>
 									<animation type="Conditional" condition="Skin.HasSetting(HomeMenuArrowAnimation)" pulse="true">
 										<effect type="fade" start="0" end="100" delay="900" time="900"  />
 										<effect type="slide" start="0,-2" end="0,4" tween="sine" easing="inout" delay="900" time="900" />
 									</animation>
 								</control>
 								<control type="image" id="202">
-									<left>240</left>
-									<top>265</top>
 									<width>21</width>
 									<height>18</height>
 									<texture background="true">buttons/arrow_top.png</texture>
 									<colordiffuse>CCFFFFFF</colordiffuse>
 									<visible>!IsEmpty(Container(20).ListItem.Property(widget))</visible>
-									<animation effect="fade" time="100" reversible="false">Visible</animation>
-									<animation effect="fade" time="100" reversible="false">Hidden</animation>
-									<animation effect="slide" end="12,0" time="200" condition="IntegerGreaterThan(Container(23).NumItems,0)" reversible="false">Conditional</animation>
 									<animation type="Conditional" condition="Skin.HasSetting(HomeMenuArrowAnimation)" pulse="true">
 										<effect type="fade" start="0" end="100" delay="900" time="900"  />
 										<effect type="slide" start="0,2" end="0,-4" tween="sine" easing="inout" delay="900" time="900" />
